--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/lodash.differencewith": "^4.5.7",
+		"@types/lodash.escaperegexp": "^4.1.7",
+		"@types/lodash.memoize": "^4.1.7",
+		"@types/lodash.uniq": "^4.5.7",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -23,6 +26,9 @@
 		"typescript": "4.7.4"
 	},
 	"dependencies": {
-		"lodash.differencewith": "^4.5.0"
+		"lodash.differencewith": "^4.5.0",
+		"lodash.escaperegexp": "^4.1.2",
+		"lodash.memoize": "^4.1.2",
+		"lodash.uniq": "^4.5.0"
 	}
 }
