--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "obsidian-index-checker",
+	"name": "Index Checker",
+	"version": "0.9.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Simple and unopinionated plugin which will ensure your index (MOC) files contain all links they should contain, while leaving structure and formatting up to you.",
+	"author": "Pavlo Deshko",
+	"authorUrl": "https://github.com/pavloDeshko/",
 	"isDesktopOnly": false
 }
