--- a/.eslintrc
+++ b/.eslintrc
@@ -15,8 +15,10 @@
     },
     "rules": {
       "no-unused-vars": "off",
+      "init-declarations": "error",
       "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }],
       "@typescript-eslint/ban-ts-comment": "off",
+      "@typescript-eslint/explicit-initialized-vars": "error",
       "no-prototype-builtins": "off",
       "@typescript-eslint/no-empty-function": "off"
     } 
