--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-index-checker",
+	"version": "0.9.0",
+	"description": "Simple and unopinionated plugin which will ensure your index (MOC) files contain all links they should contain, while leaving structure and formatting up to you.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -9,13 +9,13 @@
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
 	"keywords": [],
-	"author": "",
+	"author": "Pavlo Deshko",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/lodash.differencewith": "^4.5.7",
 		"@types/lodash.escaperegexp": "^4.1.7",
+		"@types/lodash.isequal": "^4.5.6",
 		"@types/lodash.memoize": "^4.1.7",
-		"@types/lodash.uniq": "^4.5.7",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -28,7 +28,8 @@
 	"dependencies": {
 		"lodash.differencewith": "^4.5.0",
 		"lodash.escaperegexp": "^4.1.2",
+		"lodash.isequal": "^4.5.0",
 		"lodash.memoize": "^4.1.2",
-		"lodash.uniq": "^4.5.0"
+		"zod": "^3.21.4"
 	}
 }
