--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-index-checker",
+	"id": "index-checker",
 	"name": "Index Checker",
 	"version": "0.9.2",
 	"minAppVersion": "0.15.0",
