--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "obsidian-index-checker",
 	"version": "0.9.2",
-	"description": "Simple and unopinionated plugin which will ensure your index (MOC) files contain all links they should contain, while leaving structure and formatting up to you.",
+	"description": "Make sure your index (MOC) files contain all links they should contain.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
