--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
 	"devDependencies": {
 		"@types/lodash.differencewith": "^4.5.7",
 		"@types/lodash.escaperegexp": "^4.1.7",
-		"@types/lodash.isequal": "^4.5.6",
-		"@types/lodash.memoize": "^4.1.7",
 		"@types/node": "^16.11.6",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
@@ -28,8 +26,7 @@
 	"dependencies": {
 		"lodash.differencewith": "^4.5.0",
 		"lodash.escaperegexp": "^4.1.2",
-		"lodash.isequal": "^4.5.0",
-		"lodash.memoize": "^4.1.2",
-		"zod": "^3.21.4"
+		"uid": "^2.0.2",
+		"zod": "^3.22.4"
 	}
 }
